// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`prints default document 1`] = `"<body />"`;

exports[`prints default document 2`] = `
"<body>
  <div>
    <span>
      hello
    </span>
  </div>
</body>"
`;

exports[`prints the element 1`] = `
"<body>
  <div>
    <span>
      hello
    </span>
  </div>
</body>"
`;

exports[`prints the element with attributes 1`] = `
"<body>
  <div>
    <span
      class="some-name"
      data-test-id="33"
      id="5"
    >
      hello
    </span>
  </div>
</body>"
`;

exports[`should be able to opt out of shadow DOM content 1`] = `
"<body>
  <div>
    <no-shadow-root />
  </div>
</body>"
`;

exports[`should handle DOM content bigger than maxLength 1`] = `
"<body>
  <div>
    <div>
      <div … />
    </div>
  </div>
</body>..."
`;

exports[`should handle shadow DOM content 1`] = `
"<body>
  <div>
    <custom-element>
      #shadow-root
        <span
          class="some-name"
          data-test-id="33"
          id="5"
        >
          hello
        </span>
    </custom-element>
  </div>
</body>"
`;
